# ch-chess

./: CMakeLists.txt  GamePage.qml  Main.qml  README.md  ResultDialog.qml  StartPage.qml  chessai.cpp  chessai.h  chessboard.cpp  chessboard.h  chessmanager.cpp  chessmanager.h  chesspiece.cpp  chesspiece.h  chinesechessdev.txt  introduce.txt  main.cpp  resources.qrc
